--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,4 @@ tokio = { version = "1.38.0", features = ["full"] }
 tokio-util = { version = "0.7.11", features = ["codec"] }
 futures-util = "0.3.30"
 byteorder = "1.5.0"
+enum-repr-derive = "0.2.0"
