--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,14 @@ name = "rustaxion"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "server"
+path = "src/main.rs"
+
+[[bin]]
+name = "client"
+path = "src/client.rs"
+
 [dependencies]
 anyhow = { version = "1.0.86", features = ["std", "backtrace"] }
 tokio-stream = { version = "0.1.15", features = ["tokio-util"] }
