--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,6 +71,7 @@ prost.workspace = true
 md5.workspace = true
 indent.workspace = true
 dotenvy.workspace = true
+lazy_static = "1.5.0"
 
 
 [build-dependencies]
