--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,5 +42,7 @@ chrono = "0.4.38"
 
 
 [build-dependencies]
+anyhow = { version = "1.0.86", features = ["std", "backtrace"] }
 prost-build = "0.12.6"
 protobuf-src = "2.0.1"
+indoc = "2.0.5"
