--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ description = ""
 edition = "2021"
 
 [dependencies]
+moka = { version = "0.12.7", features = ["future"] }
 sea-orm = { version = "0.12", features = [
     "sqlx-sqlite",
     "runtime-tokio-rustls",
@@ -37,7 +38,6 @@ md5 = "0.7.0"
 
 indent = "0.1.1"
 dotenvy = "0.15.7"
-lazy_static = "1.5.0"
 chrono = "0.4.38"
 
 [build-dependencies]
