--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ sea-orm = { version = "1.1", features = [
     "runtime-tokio-rustls",
     "macros",
     "with-chrono",
+    "debug-print",
 ] }
 
 sea-orm-migration = { version = "1.1", features = [
@@ -37,6 +38,8 @@ md5 = "0.7.0"
 indent = "0.1.1"
 dotenvy = "0.15.7"
 chrono = "0.4.38"
+tracing-subscriber = "0.3.18"
+tracing = "0.1.40"
 
 [build-dependencies]
 anyhow = { version = "1.0.86", features = ["std", "backtrace"] }
