--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,6 +35,9 @@ byteorder = "1.5.0"
 prost = "0.12.6"
 md5 = "0.7.0"
 
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "*"
+
 indent = "0.1.1"
 dotenvy = "0.15.7"
 chrono = "0.4.38"
