--- a/crates/eagle_tcp_client/Cargo.toml
+++ b/crates/eagle_tcp_client/Cargo.toml
@@ -9,6 +9,7 @@ path = "src/lib.rs"
 crate-type = ["cdylib"]
 
 [dependencies]
+proto = { path = "../proto" }
 futures-util = "0.3.31"
 libc = "0.2.167"
 tokio = { version = "1", features = ["full"] }
@@ -16,3 +17,4 @@ tokio-tungstenite = "0.24.0"
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 tungstenite = "0.24.0"
+tokio-util = { version = "0.7.11", features = ["full"] }
